Fix some background bleed

--- a/LANCommander.Client/Styles/_layout.scss
+++ b/LANCommander.Client/Styles/_layout.scss
@@ -1,3 +1,7 @@
+body {
+    background: #000;
+}
+
 app {
     position: absolute;
     top: 0;
