--- a/LANCommander.Client/Styles/_window.scss
+++ b/LANCommander.Client/Styles/_window.scss
@@ -1,4 +1,6 @@
 ﻿.pb-custom-window {
+    background: #000;
+
     & > * {
         position: absolute;
     }
